[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioeasysqlite"
version = "0.0.3"
authors = [
 { name="treizd", email="sqeshexaero@gmail.com" },
]
description = "Library for easy work with databases. Easier aiosqlite version."
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
dependencies = [
    "aiosqlite>=0.17.0"
]

[project.urls]
Homepage = "https://github.com/treizd/AioEasySqlite/tree/main"
Issues = "https://github.com/treizd/AioEasySqlite/issues"