[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioeasysqlite"
version = "1.1.0"
authors = [
 { name="treizd", email="sqeshexaero@gmail.com" },
]
description = "Library for easy work with databases. Easier aiosqlite version."
readme = "README.md"
requires-python = ">=3.5.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
dependencies = [
    "aiosqlite>=0.16.0"
]

[project.urls]
Homepage = "https://github.com/treizd/AioEasySqlite/tree/master"
Issues = "https://github.com/treizd/AioEasySqlite/issues"